add get friends handler, repo, friends table
